--- a/notebooks/rd_groups_match.ipynb
+++ b/notebooks/rd_groups_match.ipynb
@@ -77,6 +77,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test for a single patient: \n",
+    "#### - How do random node groups score? \n",
+    "#### - Do the outliers match the resection better then the rest of the groups?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -100,9 +110,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make 1000 random groups of group_size, as a ratio of the total number of implanted nodes\n",
+    "# Make 1000 random groups of group_size\n",
+    "# Define group size as a ratio of the total number of implanted nodes (option 1)\n",
     "r = 0.1\n",
     "group_size = int(len(nodes)*r) if int(len(nodes)*r) < len(resection) else len(resection) \n",
+    "\n",
+    "# Or, define group size as average resection size (Option 2)\n",
+    "# group_size = np.median([len(RESECTION[rs]) for rs in RESECTION])\n",
+    "\n",
     "print(f\"Number of players per group = {group_size}\")\n",
     "rd_groups = [sample(nodes, group_size) for i in range(1000)]"
    ]
@@ -140,7 +155,7 @@
     "\n",
     "FONT_SIZE = 13\n",
     "\n",
-    "count = dict(Counter(group_scores.values())) # how come game scores are a round number?\n",
+    "count = dict(Counter(group_scores.values())) # how come game scores are a round number? - it's because there is only one turn of the match\n",
     "\n",
     "count_sorted = {k:v for k, v in sorted(count.items(), key=lambda item:item[0])}\n",
     "print(count_sorted)\n",
@@ -148,7 +163,7 @@
     "           \"Scores\":list(count_sorted.keys())}\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, gridspec_kw={'width_ratios': [4, 2]}, figsize=(6,3))\n",
-    "fig.tight_layout()\n",
+    "fig.tight_layout()ç\n",
     "sns.barplot(counted, x=\"Scores\", y=\"N_nodes\", ax=ax[0])\n",
     "ax[0].set_xlabel(\"Game score (Number of wins)\", fontsize=FONT_SIZE)\n",
     "ax[0].set_xticklabels(counted[\"Scores\"], rotation=90)\n",
@@ -206,10 +221,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check if we can separate patients' postsurgical outcomes based on the ratio between resection overlaps of winners and losers. \n",
-    "The parameters include:\n",
-    "- random node group size (*r* - ratio of implanted nodes)\n",
-    "- number of standard deviations considered when defining the threshold for dividing winners and losers (*sigmas*)"
+    "#### Check if we can separate patients' postsurgical outcomes based on the ratio between resection overlaps of winners and losers. \n",
+    "#### The parameters include:\n",
+    "#### - random node group size (*r* - ratio of implanted nodes)\n",
+    "#### - number of standard deviations considered when defining the threshold for dividing winners and losers (*sigmas*)"
    ]
   },
   {
@@ -221,6 +236,11 @@
     "from joblib import Parallel, delayed\n",
     "\n",
     "def check_strategy(strat, sigmas):\n",
+    "    # For a match (cards = CM-based cross-validation scores; strategy = mm/mx/av/rd),\n",
+    "    # calculate overlap between outliers (random groups scoring above threshold,\n",
+    "    # where threshold is defined as mean+(std*sigmas), sigmas = number of standard deviations).\n",
+    "    # Returns the strategy, number of groups scoring above threshold\n",
+    "    # and the ratio between the average resection overlap of the groups above threshold and averale resection overlap of groups below threshold.\n",
     "\n",
     "    sorted_players = load(open(path_scores + f\"scores_{cm}_{strat}_{n_cards}cards_{rounds}rounds_{turns}turns_{woi}_sub{sub}.p\", \"rb\"))\n",
     "\n",
@@ -235,9 +255,9 @@
     "    winners_above_thresh = [players for players in group_scores if group_scores[players] >= thresh]\n",
     "    N_winners_above_thresh = len(winners_above_thresh)\n",
     "\n",
-    "    resection_match_winners = [len(resection_match[players]) for players in winners_above_thresh]\n",
-    "    resection_match_losers = [len(resection_match[players]) for players in resection_match if players not in winners_above_thresh]\n",
-    "    winner_loser_ratio = np.mean(resection_match_winners)/np.mean(resection_match_losers)\n",
+    "    resection_overlap_winners = [len(resection_match[players]) for players in winners_above_thresh]\n",
+    "    resection_overlap_losers = [len(resection_match[players]) for players in resection_match if players not in winners_above_thresh]\n",
+    "    winner_loser_ratio = np.mean(resection_overlap_winners)/np.mean(resection_overlap_losers)\n",
     "    return strat, N_winners_above_thresh, winner_loser_ratio"
    ]
   },
@@ -293,16 +313,7 @@
     "            Mean_overlap_ratio.append(x[2])\n",
     "\n",
     "    surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"R\":R, \"Group_size\":Group_size, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio})\n",
-    "    surgical_outcome_prediciton_data.to_excel(main_folder+\"surgical_outcome_data.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "surgical_outcome_prediciton_data.to_excel(main_folder+\"surgical_outcome_data.xlsx\")"
+    "    surgical_outcome_prediciton_data.to_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\")"
    ]
   },
   {
@@ -310,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function for computing a moving threshold-based AUC."
+    "#### Load the data of predictive features for classifying surgical outcomes."
    ]
   },
   {
@@ -319,11 +330,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to map all values >=threshold to 1 and all values <threshold to 0\n",
+    "surgical_outcome_prediciton_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Function for computing a moving threshold-based AUC."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def to_labels(pos_probs, threshold):\n",
+    "    # function to map all values >=threshold to 1 and all values <threshold to 0\n",
+    "\n",
     "\treturn list((pos_probs >= threshold).astype('int')) \n",
     "\n",
+    "\n",
     "def moving_thresh_auc(predictive_measure=[], outcome=[], moving_step=0.00001):\n",
+    "    # returns AUC, best threshold, true negatives and true positives at the best threshold\n",
     "\n",
     "    thresholds = np.arange(0, np.max(predictive_measure), moving_step)\n",
     "\n",
@@ -354,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare outcomes using Welch t-test or MannWhitneyU, depending on if the scores are distibuted normally or not, respectively. Plot only the statistically significant differences. Compute AUC using a moving threshold."
+    "#### Compare outcomes using Welch t-test or MannWhitneyU, depending on if the scores are distibuted normally or not, respectively. Plot only the statistically significant differences. Compute AUC using a moving threshold."
    ]
   },
   {
@@ -443,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try to classify outcomes using Random Forest Classifier (even though the smaple size is too small). Define which data to analyze using *sigmas* parameter."
+    "#### Try to classify outcomes using Random Forest Classifier (even though the smaple size is too small). Define which data to analyze using *sigmas* parameter."
    ]
   },
   {
