--- a/notebooks/epigame21-standard.ipynb
+++ b/notebooks/epigame21-standard.ipynb
@@ -127,8 +127,6 @@
    "outputs": [],
    "source": [
     "subs = list(range(1,22))\n",
-    "bad_subs = [3,6,10,11,12,17,18]\n",
-    "good_subs = [s for s in subs if s not in bad_subs]\n",
     "\n",
     "Subject, Outcome, CM, Strategy, Sigmas, Predictive_feature = [],[],[],[],[],[],[],[],[]\n",
     "\n",
@@ -140,10 +138,6 @@
     "\n",
     "    print(\"\\nSubject:\")\n",
     "    print(sub)\n",
-    "    if sub in bad_subs: ps_outcome=0\n",
-    "    elif sub in good_subs: ps_outcome=1\n",
-    "\n",
-    "    rounds, turns, n_cards = 100, 10, 24\n",
     "\n",
     "    strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
     "\n",
@@ -157,6 +151,12 @@
     "            ratio = data_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"Mean_overlap_ratio\"]\n",
     "            auc = score_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"MAUC\"]\n",
     "\n",
+    "            max_0 = max(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy).groupby(\"Outcome\").get_group(0)[\"Mean_overlap_ratio\"])\n",
+    "            min_1 = min(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy).groupby(\"Outcome\").get_group(1)[\"Mean_overlap_ratio\"])\n",
+    "            if min_1 <= ratio <= max_0: ps_outcome = 2 # not defined\n",
+    "            elif ratio > max_0: ps_outcome = 1\n",
+    "            elif ratio < min_1: ps_outcome = 0\n",
+    "\n",
     "            pfeat = ratio*auc\n",
     "            print(pfeat)\n",
     "\n",
@@ -169,6 +169,15 @@
     "\n",
     "    epigame21_predictive_features = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"Predictive_feature\":Predictive_feature})\n",
     "    epigame21_predictive_features.to_excel(main_folder+f\"epigame21_predictive_features.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epigame21_predictive_features = pd.read_excel(main_folder+f\"epigame21_predictive_features.xlsx\", engine='openpyxl')"
    ]
   }
  ],
