--- a/notebooks/epigame21-standard.ipynb
+++ b/notebooks/epigame21-standard.ipynb
@@ -117,7 +117,9 @@
     "sigmas = 4\n",
     "\n",
     "outcome_prediction_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\", engine='openpyxl')\n",
-    "outcome_prediction_score = pd.read_excel(main_folder+f\"surgical_outcome_prediction.xlsx\").groupby(\"Sigmas\").get_group(sigmas)"
+    "outcome_prediction_data[\"Mean_overlap_ratio\"].fillna(0, inplace=True) # if 0 winners, nan is saved, so replace it with 0\n",
+    "\n",
+    "outcome_prediction_score = pd.read_excel(main_folder+f\"surgical_outcome_prediction.xlsx\")"
    ]
   },
   {
@@ -128,13 +130,13 @@
    "source": [
     "subs = list(range(1,22))\n",
     "\n",
-    "Subject, Outcome, CM, Strategy, Sigmas, Predictive_feature = [],[],[],[],[],[],[],[],[]\n",
+    "Subject, Outcome, CM, Strategy, Sigmas, Predictive_feature = [],[],[],[],[],[]\n",
     "\n",
     "ps_outcome = 1\n",
     "for sub in subs:\n",
     "\n",
     "    data_sub = outcome_prediction_data.groupby(\"Subject\").get_group(sub)\n",
-    "    score_sub = outcome_prediction_score.groupby(\"Subject\").get_group(sub)\n",
+    "    score_sub = outcome_prediction_score.groupby(\"Sigmas\").get_group(sigmas)\n",
     "\n",
     "    print(\"\\nSubject:\")\n",
     "    print(sub)\n",
@@ -148,7 +150,7 @@
     "\n",
     "        for strategy in strategies:\n",
     "\n",
-    "            ratio = data_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"Mean_overlap_ratio\"]\n",
+    "            ratio = data_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"Mean_overlap_ratio\"].fillna(0, inplace=True) \n",
     "            auc = score_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"MAUC\"]\n",
     "\n",
     "            max_0 = max(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy).groupby(\"Outcome\").get_group(0)[\"Mean_overlap_ratio\"])\n",
@@ -178,6 +180,219 @@
    "outputs": [],
    "source": [
     "epigame21_predictive_features = pd.read_excel(main_folder+f\"epigame21_predictive_features.xlsx\", engine='openpyxl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subs = list(range(1,22))\n",
+    "bad_subs = [3,6,10,11,12,17,18]\n",
+    "good_subs = [s for s in subs if s not in bad_subs]\n",
+    "\n",
+    "Subject, Outcome, Predictive_feature = [],[],[]\n",
+    "\n",
+    "ps_outcome = 1\n",
+    "\n",
+    "for sub in subs:\n",
+    "\n",
+    "    if sub in bad_subs: ps_outcome=0\n",
+    "    elif sub in good_subs: ps_outcome=1\n",
+    "\n",
+    "    data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\").get_group(ps_outcome)\n",
+    "\n",
+    "    pfeat_average = np.average(data_sub[\"Predictive_feature\"])\n",
+    "\n",
+    "    Subject.append(sub)\n",
+    "    Outcome.append(ps_outcome)\n",
+    "    Predictive_feature.append(pfeat_average)\n",
+    "\n",
+    "epigame21_predictive_features_average = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"Predictive_feature\":Predictive_feature})\n",
+    "epigame21_predictive_features_average.to_excel(main_folder+f\"epigame21_predictive_features_average.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_excel(main_folder+f\"epigame21_predictive_features_average.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from statannot import add_stat_annotation\n",
+    "\n",
+    "from scipy.stats import shapiro\n",
+    "\n",
+    "# Do not print out pyplot outputs\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"last_expr\"\n",
+    "\n",
+    "x_plot, y_plot = list(data.Predictive_feature), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
+    "\n",
+    "# calculate moving threshold-based AUC\n",
+    "mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
+    "\n",
+    "gaussian, stest = False, ''\n",
+    "stat, p = shapiro(x_plot)\n",
+    "if p > 0.05: stest = 'Mann-Whitney'; gaussian = True\n",
+    "else: stest = 't-test_welch'\n",
+    "\n",
+    "g = sns.catplot(data=data, x='Outcome', y='Predictive_feature', order=[1,0], kind=\"box\", hue=\"Outcome\",\n",
+    "                palette=[\"#FFA7A0\", \"#ABEAC9\"],\n",
+    "                height=4, aspect=.7);\n",
+    "g.map_dataframe(sns.stripplot, x='Outcome', y='Predictive_feature', order=[1,0], hue=\"Outcome\",\n",
+    "                palette=[\"#404040\",\"#404040\"],\n",
+    "                alpha=0.6, dodge=True);\n",
+    "\n",
+    "p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\",\"bad\"],\n",
+    "                box_pairs=[(\"good\",\"bad\")],\n",
+    "                test=stest, text_format='star', loc='outside', verbose=0);\n",
+    "\n",
+    "pvalue = p_annot[1][0].__dict__[\"pval\"]\n",
+    "if pvalue<=0.05:\n",
+    "    print(stest)\n",
+    "    plt.title(f\"Sigmas = {sigmas}; Measure = ALL; Strategy = ALL; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epigame21_predictive_features = pd.read_excel(main_folder+f\"epigame21_predictive_features.xlsx\", engine='openpyxl')\n",
+    "outcome_prediction_score.sort_values(\"MAUC\")\n",
+    "\n",
+    "subs = list(range(1,22))\n",
+    "bad_subs = [3,6,10,11,12,17,18]\n",
+    "good_subs = [s for s in subs if s not in bad_subs]\n",
+    "\n",
+    "Subject, Outcome, Excluded, Predictive_feature = [],[],[],[]\n",
+    "\n",
+    "ps_outcome = 1\n",
+    "\n",
+    "excluded_cms = []\n",
+    "\n",
+    "\n",
+    "for index, row in outcome_prediction_score.iterrows():\n",
+    "    cm, strategy = row['CM'], row['Strategy']\n",
+    "    \n",
+    "    # epigame21_predictive_features = epigame21_predictive_features[(epigame21_predictive_features.CM != cm) & (epigame21_predictive_features.Strategy != strategy)]\n",
+    "\n",
+    "    index_names = epigame21_predictive_features[(epigame21_predictive_features['CM'] == cm) & (epigame21_predictive_features['Strategy'] == strategy)].index\n",
+    "    \n",
+    "    epigame21_predictive_features.drop(index_names, inplace = True)\n",
+    "\n",
+    "    excluded_cms.append(f\"{cm}-{strategy}\")\n",
+    "\n",
+    "    for sub in subs:\n",
+    "        pfeat_average = 0\n",
+    "        \n",
+    "        if sub in bad_subs: ps_outcome=0\n",
+    "        elif sub in good_subs: ps_outcome=1\n",
+    "\n",
+    "        data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\")\n",
+    "        for name, group in data_sub:\n",
+    "          if name==ps_outcome: \n",
+    "            data_sub = data_sub.get_group(ps_outcome)\n",
+    "\n",
+    "            pfeat_average = np.average(data_sub[\"Predictive_feature\"]); break\n",
+    "\n",
+    "        Subject.append(sub)\n",
+    "        Outcome.append(ps_outcome)\n",
+    "        Excluded.append(excluded_cms)\n",
+    "        Predictive_feature.append(pfeat_average)\n",
+    "\n",
+    "epigame21_predictive_features_average_pruning = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"Excluded\":Excluded, \"Predictive_feature\":Predictive_feature})\n",
+    "epigame21_predictive_features_average_pruning.to_excel(main_folder+f\"epigame21_predictive_features_average_pruning.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epigame21_predictive_features_average_pruning = pd.read_excel(main_folder+f\"epigame21_predictive_features_average_pruning_mx.xlsx\", engine='openpyxl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = epigame21_predictive_features_average_pruning.groupby(\"Excluded\")\n",
+    "\n",
+    "pvals, aucs, distances = [],[],[]\n",
+    "\n",
+    "for name, group in df:\n",
+    "    print(f\"Excluded: {name}\")\n",
+    "    \n",
+    "    data = df.get_group(name)\n",
+    "\n",
+    "    max_0 = max(data.groupby(\"Outcome\").get_group(0)[\"Predictive_feature\"])\n",
+    "    min_1 = min(data.groupby(\"Outcome\").get_group(1)[\"Predictive_feature\"])\n",
+    "    distance = min_1 - max_0\n",
+    "\n",
+    "    x_plot, y_plot = list(data.Predictive_feature), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
+    "\n",
+    "    # calculate moving threshold-based AUC\n",
+    "    mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
+    "\n",
+    "    gaussian, stest = False, ''\n",
+    "    stat, p = shapiro(x_plot)\n",
+    "    if p > 0.05: stest = 'Mann-Whitney'; gaussian = True\n",
+    "    else: stest = 't-test_welch'\n",
+    "\n",
+    "    g = sns.catplot(data=data, x='Outcome', y='Predictive_feature', order=[1,0], kind=\"box\", hue=\"Outcome\",\n",
+    "                    palette=[\"#FFA7A0\", \"#ABEAC9\"],\n",
+    "                    height=4, aspect=.7);\n",
+    "    g.map_dataframe(sns.stripplot, x='Outcome', y='Predictive_feature', order=[1,0], hue=\"Outcome\",\n",
+    "                    palette=[\"#404040\",\"#404040\"],\n",
+    "                    alpha=0.6, dodge=True);\n",
+    "\n",
+    "    p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\",\"bad\"],\n",
+    "                    box_pairs=[(\"good\",\"bad\")],\n",
+    "                    test=stest, text_format='star', loc='outside', verbose=0);\n",
+    "\n",
+    "    pvalue = p_annot[1][0].__dict__[\"pval\"]\n",
+    "    if pvalue<=0.05:\n",
+    "      print(stest)\n",
+    "      print(distance)\n",
+    "      plt.title(f\"Sigmas = {sigmas}; Measure = ALL; Strategy = ALL; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "      plt.show()\n",
+    "    plt.close('all')\n",
+    "\n",
+    "    pvals.append(pvalue)\n",
+    "    aucs.append(mauc[0])\n",
+    "    distances.append(distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(distances)\n",
+    "plt.title(\"Strategy: MM\")\n",
+    "plt.ylabel(\"Distance between class distributions\")\n",
+    "plt.xlabel(\"Pruned measures\")\n",
+    "plt.show()\n",
+    "print(f\"Maximum distance / Best model: {distances.index(max(distances))}\")"
    ]
   }
  ],
