--- a/notebooks/rd_groups_match.ipynb
+++ b/notebooks/rd_groups_match.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,9 @@
     "makedirs(path_deck, exist_ok=True)\n",
     "makedirs(path_scores, exist_ok=True)\n",
     "\n",
-    "woi = \"preseizure1\""
+    "woi = \"preseizure1\"\n",
+    "\n",
+    "ext = \"\""
    ]
   },
   {
@@ -88,9 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N_nodes = 97 ; N_resection = 4\n"
+     ]
+    }
+   ],
    "source": [
     "sub = 6\n",
     "\n",
@@ -106,17 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of players per group = 19\n"
+     ]
+    }
+   ],
    "source": [
     "# Make 1000 random groups of group_size\n",
-    "# Define group size as a ratio of the total number of implanted nodes (option 1)\n",
+    "# Define group size as a ratio of the total number of implanted nodes\n",
     "r = 0.1\n",
     "group_size = int(len(nodes)*r) if int(len(nodes)*r) < len(resection) else len(resection) \n",
-    "\n",
-    "# Or, define group size as average resection size (Option 2)\n",
-    "# group_size = np.median([len(RESECTION[rs]) for rs in RESECTION])\n",
     "\n",
     "print(f\"Number of players per group = {group_size}\")\n",
     "rd_groups = [sample(nodes, group_size) for i in range(1000)]"
@@ -313,7 +328,7 @@
     "            Mean_overlap_ratio.append(x[2])\n",
     "\n",
     "    surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"R\":R, \"Group_size\":Group_size, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio})\n",
-    "    surgical_outcome_prediciton_data.to_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\")"
+    "    surgical_outcome_prediciton_data.to_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\")"
    ]
   },
   {
@@ -330,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "surgical_outcome_prediciton_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\")"
+    "surgical_outcome_prediciton_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\")"
    ]
   },
   {
@@ -408,7 +423,7 @@
     "\n",
     "for sigmas in [2,3,4]:\n",
     "\n",
-    "    load_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\", engine='openpyxl')\n",
+    "    load_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\", engine='openpyxl')\n",
     "\n",
     "    strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
     "\n",
@@ -465,7 +480,7 @@
     "                                     \"Gauss\":Gauss, \"Pvalue-Shapiro\":Pvalue_Shapiro,\n",
     "                                     \"Test\":Test, \"Pvalue\":Pvalue,\n",
     "                                     \"MAUC\":MAUC, \"T\":T, \"TN\":TN, \"TP\":TP})\n",
-    "outcome_mannwhitneyu.to_excel(main_folder+f\"surgical_outcome_prediction.xlsx\")\n",
+    "outcome_mannwhitneyu.to_excel(main_folder+f\"surgical_outcome_prediction{ext}.xlsx\")\n",
     "pass;"
    ]
   },
@@ -490,7 +505,7 @@
     "\n",
     "sigmas = 4\n",
     "\n",
-    "load_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\", engine='openpyxl')\n",
+    "load_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\", engine='openpyxl')\n",
     "\n",
     "strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
     "\n",
@@ -539,7 +554,7 @@
     "        F1.append(results['test_f1_score'])\n",
     "\n",
     "classification_table = pd.DataFrame({\"CM\":CM, \"Strategy\":Strategy, \"Accuracy\":Accuracy, \"Precision\":Precision, \"Recall\":Recall, \"F1\":F1, \"AUROC\":AUROC, \"AUPRC\":AUPRC, \"AUPRC_rd\":AUPRC_rd})\n",
-    "# classification_table.to_excel(main_folder+f\"surgical_outcome_prediction_{sigmas}sigma_RFC.xlsx\")"
+    "# classification_table.to_excel(main_folder+f\"surgical_outcome_prediction_{sigmas}sigma_RFC{ext}.xlsx\")"
    ]
   }
  ],
