--- a/notebooks/outcome_prediction.ipynb
+++ b/notebooks/outcome_prediction.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8YHM6z_fE5UE"
       },
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "hahrowOTE5UH"
       },
@@ -59,23 +59,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "id": "hAbl7QFWE5UH",
-        "outputId": "f95bb1ee-4173-4430-ccc6-1ab612945a1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hAbl7QFWE5UH",
+        "outputId": "f95bb1ee-4173-4430-ccc6-1ab612945a1e"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
@@ -87,6 +79,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "SbplAVwGE5UP"
@@ -99,6 +92,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5ZpF5yvRE5UP"
@@ -108,6 +102,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LcFwNkH6E5UQ"
@@ -118,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "0znR0aGjE5UQ"
       },
@@ -158,6 +153,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4UQuEBLIE5UQ"
@@ -170,25 +166,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "nrjCnZsdE5UQ",
-        "outputId": "0a85351b-a46e-4147-f918-97e167217539",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nrjCnZsdE5UQ",
+        "outputId": "0a85351b-a46e-4147-f918-97e167217539"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting statannot\n",
-            "  Downloading statannot-0.2.3-py3-none-any.whl (10 kB)\n",
-            "Installing collected packages: statannot\n",
-            "Successfully installed statannot-0.2.3\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
@@ -196,7 +180,7 @@
         "!pip install statannot\n",
         "from statannot import add_stat_annotation\n",
         "\n",
-        "from scipy.stats import shapiro\n",
+        "from scipy.stats import shapiro, mannwhitneyu, ttest_ind\n",
         "\n",
         "# Do not print out pyplot outputs\n",
         "from IPython.core.interactiveshell import InteractiveShell\n",
@@ -223,10 +207,16 @@
         "            # calculate moving threshold-based AUC\n",
         "            mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
         "\n",
+        "            group1 = [x for i,x in enumerate(x_plot) if y_plot[i]==1]\n",
+        "            group0 = [x for i,x in enumerate(x_plot) if y_plot[i]==0]\n",
+        "\n",
         "            gaussian, stest = False, ''\n",
-        "            stat, p = shapiro(x_plot)\n",
-        "            if p > 0.05: stest = 'Mann-Whitney'; gaussian = True\n",
-        "            else: stest = 't-test_welch'\n",
+        "            stat1, p1 = shapiro(group1)\n",
+        "            stat0, p0 = shapiro(group0)\n",
+        "\n",
+        "            pvalue = 1\n",
+        "            if p1 > 0.05 or p0 > 0.05: _, pvalue = mannwhitneyu(group1, group0, alternative='two-sided'); stest = 'Mann-Whitney'; gaussian = True\n",
+        "            elif p1 <= 0.05 and p0 <= 0.05: _, pvalue = ttest_ind(group1, group0, equal_var = False); stest = 't-test_welch'\n",
         "\n",
         "            g = sns.catplot(data=data, x='Outcome', y='Mean_overlap_ratio', order=[1,0], kind=\"box\", hue=\"Outcome\",\n",
         "                            palette=[\"#FFA7A0\", \"#ABEAC9\"],\n",
@@ -239,8 +229,9 @@
         "                            box_pairs=[(\"good\",\"bad\")],\n",
         "                            test=stest, text_format='star', loc='outside', verbose=0);\n",
         "            \n",
-        "            pvalue = p_annot[1][0].__dict__[\"pval\"]\n",
+        "            pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
         "            if pvalue<=0.05:\n",
+        "                print(\"P-value computed by statannot =\", pvalue_statannot)\n",
         "                print(stest)\n",
         "                plt.title(f\"Sigmas = {sigmas}; Measure = {cm}; Strategy = {strategy}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
         "                plt.show()\n",
@@ -251,7 +242,7 @@
         "            CM.append(cm)\n",
         "            Strategy.append(strategy)\n",
         "            Gauss.append(gaussian)\n",
-        "            Pvalue_Shapiro.append(p)\n",
+        "            Pvalue_Shapiro.append((p0,p1))\n",
         "            Test.append(stest)\n",
         "            Pvalue.append(pvalue)\n",
         "            MAUC.append(mauc[0])\n",
@@ -269,6 +260,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -286,10 +280,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.10.6"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "provenance": []
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
