--- a/notebooks/rd_groups_match.ipynb
+++ b/notebooks/rd_groups_match.ipynb
@@ -63,17 +63,17 @@
     "# drive.mount('/content/gdrive')\n",
     "# main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
     "\n",
+    "woi = \"preseizure1\"\n",
+    "\n",
     "main_folder = \"/home/kivi/gdrive/epigame-folder/\"\n",
     "\n",
-    "path_res = main_folder + \"cvs_pairs/\"\n",
+    "path_res = main_folder + f\"{woi}/\"\n",
     "\n",
     "path_deck = main_folder + \"decks/\"\n",
     "path_scores = main_folder + \"game_scores/\"\n",
     "\n",
     "makedirs(path_deck, exist_ok=True)\n",
     "makedirs(path_scores, exist_ok=True)\n",
-    "\n",
-    "woi = \"preseizure1\"\n",
     "\n",
     "ext = \"\""
    ]
@@ -328,7 +328,7 @@
     "            Mean_overlap_ratio.append(x[2])\n",
     "\n",
     "    surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"R\":R, \"Group_size\":Group_size, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio})\n",
-    "    surgical_outcome_prediciton_data.to_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\")"
+    "    surgical_outcome_prediciton_data.to_excel(path_res+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\")"
    ]
   },
   {
@@ -345,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "surgical_outcome_prediciton_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\")"
+    "surgical_outcome_prediciton_data = pd.read_excel(path_res+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\")"
    ]
   },
   {
@@ -423,7 +423,7 @@
     "\n",
     "for sigmas in [2,3,4]:\n",
     "\n",
-    "    load_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\", engine='openpyxl')\n",
+    "    load_data = pd.read_excel(path_res+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\", engine='openpyxl')\n",
     "\n",
     "    strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
     "\n",
@@ -440,10 +440,16 @@
     "            # calculate moving threshold-based AUC\n",
     "            mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
     "\n",
+    "            group1 = [x for i,x in enumerate(x_plot) if y_plot[i]==1]\n",
+    "            group0 = [x for i,x in enumerate(x_plot) if y_plot[i]==0]\n",
+    "\n",
     "            gaussian, stest = False, ''\n",
-    "            stat, p = shapiro(x_plot)\n",
-    "            if p > 0.05: stest = 'Mann-Whitney'; gaussian = True\n",
-    "            else: stest = 't-test_welch'\n",
+    "            stat1, p1 = shapiro(group1)\n",
+    "            stat0, p0 = shapiro(group0)\n",
+    "\n",
+    "            pvalue = 1\n",
+    "            if p1 > 0.05 or p0 > 0.05: _, pvalue = mannwhitneyu(group1, group0, alternative='two-sided'); stest = 'Mann-Whitney'; gaussian = True\n",
+    "            elif p1 <= 0.05 and p0 <= 0.05: _, pvalue = ttest_ind(group1, group0, equal_var = False); stest = 't-test_welch'\n",
     "\n",
     "            g = sns.catplot(data=data, x='Outcome', y='Mean_overlap_ratio', order=[1,0], kind=\"box\", hue=\"Outcome\",\n",
     "                            palette=[\"#FFA7A0\", \"#ABEAC9\"],\n",
@@ -456,8 +462,9 @@
     "                            box_pairs=[(\"good\",\"bad\")],\n",
     "                            test=stest, text_format='star', loc='outside', verbose=0);\n",
     "            \n",
-    "            pvalue = p_annot[1][0].__dict__[\"pval\"]\n",
+    "            pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
     "            if pvalue<=0.05:\n",
+    "                print(\"P-value computed by statannot =\", pvalue_statannot)\n",
     "                print(stest)\n",
     "                plt.title(f\"Sigmas = {sigmas}; Measure = {cm}; Strategy = {strategy}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
     "                plt.show()\n",
@@ -468,7 +475,7 @@
     "            CM.append(cm)\n",
     "            Strategy.append(strategy)\n",
     "            Gauss.append(gaussian)\n",
-    "            Pvalue_Shapiro.append(p)\n",
+    "            Pvalue_Shapiro.append((p0,p1))\n",
     "            Test.append(stest)\n",
     "            Pvalue.append(pvalue)\n",
     "            MAUC.append(mauc[0])\n",
@@ -480,7 +487,7 @@
     "                                     \"Gauss\":Gauss, \"Pvalue-Shapiro\":Pvalue_Shapiro,\n",
     "                                     \"Test\":Test, \"Pvalue\":Pvalue,\n",
     "                                     \"MAUC\":MAUC, \"T\":T, \"TN\":TN, \"TP\":TP})\n",
-    "outcome_mannwhitneyu.to_excel(main_folder+f\"surgical_outcome_prediction{ext}.xlsx\")\n",
+    "outcome_mannwhitneyu.to_excel(path_res+f\"surgical_outcome_prediction{ext}.xlsx\")\n",
     "pass;"
    ]
   },
@@ -505,7 +512,7 @@
     "\n",
     "sigmas = 4\n",
     "\n",
-    "load_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\", engine='openpyxl')\n",
+    "load_data = pd.read_excel(path_res+f\"surgical_outcome_data_{sigmas}sigma{ext}.xlsx\", engine='openpyxl')\n",
     "\n",
     "strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
     "\n",
@@ -554,7 +561,7 @@
     "        F1.append(results['test_f1_score'])\n",
     "\n",
     "classification_table = pd.DataFrame({\"CM\":CM, \"Strategy\":Strategy, \"Accuracy\":Accuracy, \"Precision\":Precision, \"Recall\":Recall, \"F1\":F1, \"AUROC\":AUROC, \"AUPRC\":AUPRC, \"AUPRC_rd\":AUPRC_rd})\n",
-    "# classification_table.to_excel(main_folder+f\"surgical_outcome_prediction_{sigmas}sigma_RFC{ext}.xlsx\")"
+    "# classification_table.to_excel(path_res+f\"surgical_outcome_prediction_{sigmas}sigma_RFC{ext}.xlsx\")"
    ]
   }
  ],
