--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -454,12 +454,13 @@
     "\n",
     "    kmeans_kwargs = {\n",
     "    \"init\": \"random\",\n",
+    "    \"n_clusters\": 2,\n",
     "    \"n_init\": 10,\n",
     "    \"random_state\": 1,\n",
     "    }\n",
     "\n",
-    "    kmeans = KMeans(init=\"random\", n_clusters=2, n_init=10, random_state=None)\n",
-    "    kmeans.fit(delta)\n",
+    "    kmeans = KMeans(kmeans_kwargs)\n",
+    "    kmeans.fit(delta) # should be scaled_features instead of delta\n",
     "    \n",
     "    l_en = 0 if list(kmeans.labels_).count(0) < list(kmeans.labels_).count(1) else 1 # Smaller cluster\n",
     "    \n",
